add favicon + preview image

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Bienvenue sur votre nouveau réseau social d'entreprise Groupomania"
     />
+    <link rel="shortcut icon" href="favicon-groupomania.png"/>
 
     <title>Groupomania</title>
   </head>
