--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Bienvenue sur votre nouveau réseau social d'entreprise Groupomania"
     />
-    <link rel="shortcut icon" href="favicon-groupomania.png"/>
+    <link rel="shortcut icon" href="./public//favicon-groupomania.png"/>
 
     <title>Groupomania</title>
   </head>
